# django-ninja-benchmarks

./: .dockerignore  Dockerfile  README.md  _killservers.py  bench.py  check_results.py  cli.py  docker-compose.yml  harness.py  make_charts.py  microbench_validate.py  network_service.py  pyproject.toml  requirements-local.txt  route_matrix.py  run_local.py  server_matrix.py  tools_bench.py  tools_charts.py  tools_check.py  tools_microbench.py  tools_network_service.py
.github/workflows/: bench.yml  lint.yml
app_flask_marshmallow/: asgi.py  main.py
apps/: common_django_settings.py
apps/app_drf/: manage.py
apps/app_drf/drf/: asgi.py  settings.py  urls.py  views.py  wsgi.py
apps/app_flask_marshmallow/: asgi.py  main.py
apps/app_ninja/: manage.py
apps/app_ninja/djninja/: api.py  asgi.py  settings.py  urls.py  wsgi.py
benchmark_results/: results_local.csv  results_local.json  results_route_matrix.json  results_server_matrix.json
charts/: index.html
