[project]
name = "django-ninja-benchmarks"
version = "0.0.0"
description = "Benchmarking Django Ninja vs DRF vs Flask+marshmallow, re-run on a modern (2026) stack."
requires-python = ">=3.13"

# The single source of truth for the benchmark stack (formerly requirements-local.txt).
# Pinned to what produced the committed benchmark_results/*.json; uv.lock locks transitives.
# The load generator `oha` is a Rust binary, installed separately (see README / Dockerfile).
dependencies = [
    "adrf==0.1.12",
    "aiohttp==3.14.1",
    "asgiref==3.11.1",
    "Django==6.0.6",
    "django-ninja==1.6.2",
    "djangorestframework==3.17.1",
    "Flask==3.1.3",
    "gunicorn==26.0.0",
    "marshmallow==3.26.2",
    "requests==2.34.2",
    "sanic==25.12.1",
    "uvicorn==0.49.0",
    "uWSGI==2.0.31",
]

[tool.uv]
# Scripts-only repo, not an installable package: don't try to build/install the project itself.
package = false

[dependency-groups]
# Dev-only; not part of the benchmark stack. CI runs ruff via uvx, so this is just for local `uv run`.
dev = ["ruff==0.14.4"]

[tool.ruff]
line-length = 120          # apps + matrices are hand-written to ~120; 88 would explode compact tables
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]          # the formatter owns line length; don't fail on unbreakable command strings / URLs

[tool.ruff.lint.per-file-ignores]
# Django settings compose the base config via `from ... import *`; those names ARE defined.
"**/settings.py" = ["F403", "F405"]
